--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,10 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+STRING = String
+API_BASE_URL = API_BASE_URL
+API_BASE_URL_STAGING = "http://api.apixu.com/v1/"
+API_BASE_URL_PRODUCTION = "http://api.apixu.com/v1/"
+
+APIXU_KEY = APIUX_KEY
+APIXU_KEY_VALUE = "e4d0d02d1f0042488d135512181204"
